objects/H2S__HarvestTimeEntry__c.object
<CustomObject>
    <description>HarvestSync for Salesforce - Time entries mirrored from Harvest using HarvestSync for Salesforce.</description>
    <fields>
        <fullName>H2S__Date__c</fullName>
        <inlineHelpText>Date of time entry if tracking time by duration vs. start and end time.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H2S__Duration__c</fullName>
        <inlineHelpText>Duration of time in decimal format.  Eg., 2.75 = 2 hours and 45 minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2S__EndTime__c</fullName>
        <inlineHelpText>If time is tracked by start and end time vs. duration, this is the end time.</inlineHelpText>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>H2S__HarvestEntryId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is the unique ID of a time card in HarvestApp.</inlineHelpText>
        <label>Harvest Entry Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>H2S__HarvestProject__c</fullName>
        <inlineHelpText>Project time is related to.</inlineHelpText>
        <label>HarvestProject</label>
        <referenceTo>H2S__HarvestProject__c</referenceTo>
        <relationshipName>HarvestTimeCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>H2S__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this time card has been invoiced in Harvest</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2S__Notes__c</fullName>
        <inlineHelpText>Description of time / notes</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H2S__Person__c</fullName>
        <inlineHelpText>Name/Alias of person logging time.</inlineHelpText>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__StartTime__c</fullName>
        <inlineHelpText>If time is tracked by start and end time vs. duration, this is the start time.</inlineHelpText>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>H2S__Task_Type__c</fullName>
        <inlineHelpText>Type of time.  These values are maintained in Harvest and are one-way Harvest--&gt;SFDC.</inlineHelpText>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>T-{YYYY}-{MM}-{0}</displayFormat>
        <label>Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>